--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: ZillaLib
 description: "Sleek multiplatform C++ 2D game creation!"
-markdown: redcarpet
+markdown: kramdown
 paginate: 5
 permalink: /:title
 rss-feed-limit: 10
